--- a/d3.html
+++ b/d3.html
@@ -5,8 +5,27 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Learning D3</title>
+    <script src="https://d3js.org/d3.v7.min.js"></script>
+    <style>
+        .big{
+            font-size: 20px;
+        }
+    </style>
 </head>
 <body>
-    
+    <ul class="items">
+        <li>This is an item</li>
+        <li>This is an item</li>
+        <li>This is an item</li>
+        <li>This is an item</li>
+        <li>This is an item</li>
+        <li>This is an item</li>
+    </ul>
+    <script>
+        d3.selectAll('li:nth-child(odd)')
+        .style('color', 'green')
+        .html('This is an odd line')
+        .classed('big', true);
+    </script>
 </body>
 </html>
